spacing for start/stop control panel (not ideal)
git-svn-id: http://svn.opengeo.org/suite/trunk@1198 fe66add1-021f-4af3-b75b-ea5154e73f91

--- a/dashboard/OpenGeo Dashboard/Resources/app/theme/style.css
+++ b/dashboard/OpenGeo Dashboard/Resources/app/theme/style.css
@@ -284,6 +284,7 @@ ul.quick-links {
 .app-msg-warn {
     background: url('img/delete.png') no-repeat;
     color: #ff4748;
+    top: 8px !important;
 }
 
 .app-msg-info {
@@ -293,6 +294,8 @@ ul.quick-links {
 .app-msg-ok {
     background: url('img/tick.png') no-repeat;
     color: #81cb77;
+    top: 8px !important;
+    
 }
 
 .control-button {
